fix layout box-shadow on iphone

--- a/src/Core/components/Contact/Contact.css
+++ b/src/Core/components/Contact/Contact.css
@@ -1,4 +1,5 @@
 .primary-input{
+    -webkit-appearance: none;
     padding: 0.75rem 4rem 0.75rem 0.75rem;
     width: 100%;
     outline: none;
@@ -7,6 +8,7 @@
     box-shadow: rgba(14, 30, 37, 0.12) 0px 1px 2px 0px, var(--color-primary) 0px 1px 4px 0px;
 }
 .error-input{
+    -webkit-appearance: none;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 1px 2px 0px, var(--color-red) 0px 1px 4px 0px !important;
 }
 textarea{
